--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -3,14 +3,25 @@
         <div class="jumbotron">
         <div class="container"> 
         {% if current_user.is_authenticated %}
-            <h3 class="display-3">Hello!</h3><h2 class="display-5">老师 {{ current_user.name }}</h2>
+        	{%if current_user.role == ROLE_USER %}
+            <h3 class="display-3">Hello!</h3><h2 class="display-5">老师 {{ current_user.name }} </h2>
+            <p>您现在可以开始上传资料</p>
+            <p><a class="btn btn-primary btn-lg" href="/userCentre" role="button">管理资料</a>
+            <a class="btn btn-primary btn-lg" href="/userLogout" role="button">退出登录</a>
+            </p>
+        	{% else %}
+        	<h3 class="display-3">Hello!</h3><h2 class="display-5">管理员 {{ current_user.name }} </h2>
+        	<p>您现在可以开始管理后台</p>
+            <p><a class="btn btn-primary btn-lg" href="/adminCentre" role="button">管理资料</a>
+            <a class="btn btn-primary btn-lg" href="/userLogout" role="button">退出登录</a>
+            </p>
+	        {% endif %}
         {% else %}
         	<h3 class="display-3">请登录</h3>
-        {% endif %}
-            <p>教师登陆后可以进行学生学科竞赛获奖情况上传/管理员登录进行后台审核</p>
-            <p><a class="btn btn-primary btn-lg" href="/userLogin" role="button">教师登陆 »</a>
-            <a class="btn btn-primary btn-lg" href="/adminLogin" role="button">管理登陆 »</a>
+        	<p>教师登陆后可以进行学生学科竞赛获奖情况上传/管理员登录进行后台审核</p>
+            <p><a class="btn btn-primary btn-lg" href="/userLogin" role="button">登录系统 »</a>
             </p>
+        {% endif %}
         </div>
         </div>
 {% endblock %}
